--- a/Applications/Applications.csproj
+++ b/Applications/Applications.csproj
@@ -9,10 +9,18 @@
   <ItemGroup>
     <None Remove="UnitTests\" />
     <None Remove="UnitTests\Fixtures\" />
+    <None Remove="CustormerApp\" />
+    <None Remove="CalculatorApp\" />
+    <None Remove="CarApp\" />
+    <None Remove="GuidGeneratorUtil\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="UnitTests\" />
     <Folder Include="UnitTests\Fixtures\" />
+    <Folder Include="CustormerApp\" />
+    <Folder Include="CalculatorApp\" />
+    <Folder Include="CarApp\" />
+    <Folder Include="GuidGeneratorUtil\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.6.6" />
@@ -21,5 +29,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.26" />
+    <PackageReference Include="NSubstitute" Version="5.1.0" />
   </ItemGroup>
 </Project>
